--- a/Python_Loops.ipynb
+++ b/Python_Loops.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "db95a113",
    "metadata": {
     "deletable": false,
@@ -111,11 +111,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2005954989.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [2]\u001b[1;36m\u001b[0m\n\u001b[1;33m    The for loop\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "The for loop\n",
+    "The while loop"
    ]
   },
   {
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1aa7533a",
    "metadata": {
     "deletable": false,
@@ -159,11 +167,30 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 is odd\n",
+      "2 is even\n",
+      "3 is odd\n",
+      "4 is even\n",
+      "5 is odd\n",
+      "6 is even\n",
+      "7 is odd\n",
+      "8 is even\n",
+      "9 is odd\n",
+      "10 is even\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "for i in range(1, 11):\n",
+    "    if i % 2 == 0:\n",
+    "        print(i, \"is even\")\n",
+    "    else:\n",
+    "        print(i, \"is odd\")"
    ]
   },
   {
@@ -192,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9e8f1860",
    "metadata": {
     "deletable": false,
@@ -208,12 +235,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.5, 16.42, 10.77, 8.3, 34.21]\n",
+      "[5.0, 32.84, 21.54, 16.6, 68.42]\n"
+     ]
+    }
+   ],
    "source": [
     "float_list = [2.5, 16.42, 10.77, 8.3, 34.21]\n",
+    "print(float_list)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "for i in range(0, len(float_list)):\n",
+    "    float_list [i] = float_list [i] * 2\n",
+    "\n",
+    "print(float_list)\n"
    ]
   },
   {
@@ -244,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "78bb43a2",
    "metadata": {
     "deletable": false,
@@ -260,12 +299,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "float_list = [2.5, 16.42, 10.77, 8.3, 34.21]\n",
+    "count_greater = 0\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "for num in float_list:\n",
+    "    if num > 10:\n",
+    "        count_greater += 1\n",
+    "\n",
+    "print(count_greater)       "
    ]
   },
   {
@@ -293,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8bcc51bf",
    "metadata": {
     "deletable": false,
@@ -309,13 +360,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 27\n",
+      "27 23\n"
+     ]
+    }
+   ],
    "source": [
     "n = 50\n",
-    "num_list = [10, 4, 23, 6, 18, 27, 47]\n",
+    "num_list = [10, 25, 4, 23, 6, 18, 27, 47]\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "for n1 in num_list:\n",
+    "    for n2 in num_list:\n",
+    "        if (n1 != n2):\n",
+    "            if (n1 + n2 == n):\n",
+    "                print(n1, n2)"
    ]
   },
   {
@@ -363,9 +426,9 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "The break keyword can break the loop when we no longer want the loops to keep running.\n",
+    "The continue key will skip code and move on to the next iteration and then code. \n",
+    "The pass code is used to show the person that code still needs to be entered but want to run the rest of the code."
    ]
   },
   {
@@ -394,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f70863fe",
    "metadata": {
     "deletable": false,
@@ -410,11 +473,23 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "n = 2 \n",
+    "power = 0 \n",
+    "val = n \n",
+    "while val < 1000:\n",
+    "    power += 1\n",
+    "    val *=n\n",
+    "print(power)"
    ]
   },
   {
@@ -445,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "92b9c0b7",
    "metadata": {
     "deletable": false,
@@ -461,18 +536,31 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "n = 249\n",
+    "last = n % 10\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "first = n\n",
+    "while first >= 10:\n",
+    "    first //= 10\n",
+    "\n",
+    "result = first + last\n",
+    "print(result)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -486,7 +574,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "af7b0cce07376c58e2b36d64612d3cbee2d17660412879c7b0bfdcd47aa3d96c"
+   }
   }
  },
  "nbformat": 4,
